# finops-cloud

./: CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
cli/: config_loader.py  main.py  output.py
cloud/: base.py
cloud/aws/: collector.py  cost_collector.py  resource_collector.py
cloud/azure/: __init__.py  collector.py  cost_collector.py  resource_collector.py
cloud/gcp/: __init__.py  collector.py  cost_collector.py  resource_collector.py
cost_model/: __init__.py  models.py
intelligence/: anomaly.py  constants.py  contributors.py  forecast.py  waste.py
llm/: client.py  prompt_builder.py  sanitizer.py
storage/: __init__.py  base.py  sqlite_adapter.py
tests/: __init__.py  conftest.py  test_aws_collector.py  test_azure_collector.py  test_cost_model.py  test_gcp_collector.py  test_intelligence.py  test_llm.py  test_storage.py
